# prymal-os

./: .replit  Makefile  README.md  app.py  entities.py  main.py  pyproject.toml  replit.md  task_store.db
api/: __init__.py  dependencies.py
api/routers/: __init__.py  dispatch.py  execution.py  health.py  intake.py  tasks.py  work_requests.py
artifacts/: __init__.py  action.py  analysis.py  base.py  content.py  recommendation.py  report.py  signal.py
attached_assets/: Pasted-Functional-requirements-Task-model-The-task-entity-must_1773600661550.txt  Pasted-Testing-requirements-Kernel-smoke-tests-Update-existing_1773600671590.txt  Pasted-Using-CPython-3-12-11-interpreter-at-nix-store-h097imm3_1773595653132.txt  Pasted-latform-linux-Python-3-12-11-pytest-9-0-2-pluggy-1-6-0-_1773596087807.txt  opsiq_kernel_upgrade_prd_1773601517364.txt
config/: __init__.py  core.py  core.yaml
integrations/: base.py  signal_translator.py
integrations/slack/: adapter.py  delivery.py  router.py  schema.py  socket_client.py
interfaces/inputs/: sample_task.py
kernel/: config.py  ingress_pipeline.py  model.py
kernel/intake/: intake_service.py
kernel/nodes/: base.py  errors.py  result.py
kernel/runtime/: execution_loop.py  task_executor.py
kernel/scheduler/: dispatcher.py  (+1 more)
scripts/: post-merge.sh  run_api_e2e.py  run_worker_demo.py  test_ingress.py  test_ingress_to_task.py  test_run_ingress_to_store.py
signatures/: __init__.py
templates/: index.html
tests/: conftest.py
workers/: general_worker.py  marketing_worker.py  operations_worker.py  research_worker.py
(+48 files in other folders)
