[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.1.3",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "gunicorn>=25.1.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.2.2",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.11",
    "email-validator>=2.3.0",
    "slack-bolt>=1.27.0",
]
